--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,7 +19,51 @@ ion-navbar {
   .toolbar-background {
     background-color: color($colors, primary);
   }
-  .toolbar-title {
-    color: #fff;
+  .profile-avatar {
+    .bar-button {
+      .button-inner {
+        img {
+          height: 32.5px;
+          width: 32.5px;
+          border-radius: 50%;
+          box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+        }
+      }
+    }
+  }
+}
+
+ion-menu {
+  .header {
+    height: 50px;
+    img {
+      position: absolute;
+      top: 12px;
+      right: 16px;
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 100%;
+    }
+    h4 {
+      font-weight: 700;
+      margin: 16px 16px 0px;
+    }
+    p {
+      margin: 0px 16px 16px;
+      color: #999999;
+    }
+  }
+  .pages {
+    .main-buttons:nth-of-type(4) {
+      .item-inner {
+        border-bottom: none;
+      }
+    }
+    .other-buttons {
+      .item-inner {
+        border-bottom: none;
+      }
+    }
   }
 }
