--- a/src/pages/agenda/agenda.scss
+++ b/src/pages/agenda/agenda.scss
@@ -1,3 +1,25 @@
 page-agenda {
-
+  ion-navbar {
+    .segment {
+      background-color: color($colors, primary-darker);
+      border-radius: 2px;
+      .segment-button {
+        background-color: rgba(255,255,255,0);
+        color: #fff;
+        border-bottom: none;
+      }
+      .segment-activated {
+        box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+        background-color: color($colors, primary);
+        border-bottom: 2px solid rgba(255,255,255,0.25) !important;
+        border-radius: 2px;
+      }
+    }
+    .add-button {
+      color: #fff;
+    }
+    .add-button:hover {
+      color: rgba(255,255,255,0.5) !important;
+    }
+  }
 }
