--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -1,8 +1,8 @@
-page-courses {
-  .add-button {
+page-explore {
+  .options-button {
     color: #fff;
   }
-  .add-button:hover {
+  .options-button:hover {
     color: rgba(255,255,255,0.5) !important;
   }
 }
