--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -12,13 +12,13 @@ page-login {
     left: 0;
     margin: auto;
     .logo {
-      width: 150px;
+      width: 200px;
       margin-bottom: 16px;
     }
     .login-form {
       .segment {
         background-color: color($colors, primary-darker);
-        border-radius: 5px;
+        border-radius: 2px;
         .segment-button {
           background-color: rgba(255,255,255,0);
           color: #fff;
@@ -28,7 +28,7 @@ page-login {
           box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
           background-color: color($colors, primary);
           border-bottom: 2px solid rgba(255,255,255,0.25);
-          border-radius: 5px;
+          border-radius: 2px;
         }
       }
       .list {
@@ -36,17 +36,51 @@ page-login {
         .label {
           margin-left: 20px;
         }
-        .item-input.ng-valid.input-has-value::after {
-          border-bottom-color: transparent !important;
-        }
       }
       .login-button {
-        border-radius: 5px;
+        border-radius: 2px;
         background-color: color($colors, secondary);
       }
       .login-button:hover {
         background-color: color($colors, secondary-darker);
       }
     }
+  }
+  .item-md.item-input.input-has-focus .item-inner {
+    border-bottom-color: transparent !important;
+    box-shadow: none !important;
+  }
+
+  .list-md .item-input.input-has-focus:last-child {
+    border-bottom-color: transparent !important;
+    box-shadow: none !important;
+  }
+
+  .list-md .item-input.input-has-focus:last-child .item-inner {
+    box-shadow: none;
+  }
+
+  .item-md.item-input.ng-valid.input-has-value:not(.input-has-focus) .item-inner {
+    border-bottom-color: transparent !important;
+    box-shadow: none !important;
+  }
+
+  .list-md .item-input.ng-valid.input-has-value:not(.input-has-focus):last-child {
+    border-bottom-color: transparent !important;
+    box-shadow: none !important;
+  }
+
+  .list-md .item-input.ng-valid.input-has-value:not(.input-has-focus):last-child .item-inner {
+    box-shadow: none;
+  }
+
+  .item-md.item-input.ng-invalid.ng-touched:not(.input-has-focus) .item-inner {
+    border-bottom-color: transparent !important;
+    box-shadow: none !important;
+  }
+
+  .list-md .item-input.ng-invalid.ng-touched:not(.input-has-focus):last-child {
+    border-bottom-color: transparent !important;
+    box-shadow: none !important;
   }
 }
