--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,7 @@ $colors: (
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
+$searchbar-md-input-box-shadow: 0px 1px 1px rgba(0,0,0,0.3);
 
 // App iOS Variables
 // --------------------------------------------------
