--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,9 @@ ion-navbar {
   .toolbar-background {
     background-color: color($colors, primary);
   }
+  .toolbar-title {
+    color: #fff;
+  }
   .profile-avatar {
     .bar-button {
       .button-inner {
