--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,66 @@
 page-profile {
-
+  ion-navbar {
+    .bar-buttons {
+      .bar-button {
+        color: #fff;
+      }
+      .bar-button:hover {
+        color: rgba(255,255,255,0.5);
+      }
+    }
+  }
+  .profile-header {
+    position: relative;
+    padding: 20px;
+    height: 175px;
+    background-color: color($colors, light);
+    img {
+      width: 100px;
+      border-radius: 50%;
+    }
+    .spinner {
+      
+    }
+    .image-upload {
+      position: absolute;
+      bottom: 8px;
+      left: 38px;
+      background-color: rgba(255,255,255,0);
+      box-shadow: none;
+      ion-icon {
+        font-size: 30px;
+        filter: drop-shadow(0px 1px 2px rgba(0,0,0,0.1));
+      }
+    }
+    .names {
+      .item {
+        background-color: rgba(255,255,255,0);
+      }
+      position: absolute;
+      top: 10px;
+      left: 160px;
+      
+    }
+  }
+  ion-footer {
+    height: 50px;
+    .button {
+      margin: 0px 0px;
+      padding: 0px 0px !important;
+      height: 100%;
+      border-radius: 0px;
+      width: 50%;
+    }
+    .button:nth-of-type(1) {
+      background-color: #fff;
+      color: color($colors, primary);
+      box-shadow: none;
+    }
+    .button:nth-of-type(1):hover {
+      background-color: #fff;
+    }
+    .button:nth-of-type(2) {
+      float: right;
+    }
+  }
 }
