--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -1,3 +1,50 @@
 page-explore {
-  
+  .scroll-content {
+    background-color: color($colors, light);
+    padding: 50px 10px 10px;
+  }
+  .write-post {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 5px 10px;
+    background-color: #fff;
+    z-index: 5;
+    box-shadow: 0px 20px 20px -20px rgba(0, 0, 0, 0.3);
+    height: 50px;
+  }
+  .post {
+    padding: 10px 20px 20px 70px;
+    max-width: 500px;
+    margin: 10px auto;
+    border-radius: 2px;
+    box-shadow: 0px 20px 20px -20px rgba(0, 0, 0, 0.3);
+    border-top: none !important;
+    border-bottom: none !important;
+    .avatar {
+      position: absolute;
+      top: 20px;
+      left: 10px;
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 100%;
+    }
+    .shared-post {
+      border: 2px solid color($colors, light);
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 2px;
+      white-space: normal;
+      img {
+        max-width: 150px;
+      }
+    }
+    .shared-post:hover {
+      background-color: rgba(0, 0, 0, 0.05);
+    }
+    .item-inner {
+      border-bottom: none !important;
+    }
+  }
 }
