--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,6 +31,7 @@ $colors: (
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 $searchbar-md-input-box-shadow: 0px 1px 1px rgba(0,0,0,0.3);
+$font-family-ios-base: 'Ubuntu', Helvetica, sans-serif;
 
 // App iOS Variables
 // --------------------------------------------------
