--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,8 +17,16 @@
 
 @font-face {
   font-family: 'Ubuntu';
-  src: url(../assets/fonts/Ubuntu-Regular.ttf) format('truetype');
-  font-weight: normal;
+  font-style: normal;
+  font-weight: 400;
+  src: url(../assets/fonts/Ubuntu/Ubuntu-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../assets/fonts/OpenSans/OpenSans-Regular.ttf) format('truetype');
 }
 
 ion-navbar {
@@ -85,7 +93,7 @@ ion-menu {
       border-radius: 100%;
     }
     h4 {
-      font-weight: 700;
+      font-weight: bold;
       margin: 16px 16px 0px;
     }
     p {
