--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,3 @@
-// http://ionicframework.com/docs/v2/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -16,17 +13,73 @@
 // automatically applied to the <body> element in the app.
 
 @font-face {
-  font-family: 'Ubuntu';
+  font-family: 'OpenSans';
   font-style: normal;
   font-weight: 400;
-  src: url(../assets/fonts/Ubuntu/Ubuntu-Regular.ttf) format('truetype');
+  src: url(../assets/fonts/OpenSans/OpenSans-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: italic;
+  font-weight: 400;
+  src: url(../assets/fonts/OpenSans/OpenSans-Italic.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'OpenSans';
   font-style: normal;
-  font-weight: 400;
-  src: url(../assets/fonts/OpenSans/OpenSans-Regular.ttf) format('truetype');
+  font-weight: 100;
+  src: url(../assets/fonts/OpenSans/OpenSans-Light.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: italic;
+  font-weight: 100;
+  src: url(../assets/fonts/OpenSans/OpenSans-LightItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 500;
+  src: url(../assets/fonts/OpenSans/OpenSans-SemiBold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: italic;
+  font-weight: 500;
+  src: url(../assets/fonts/OpenSans/OpenSans-SemiBoldItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../assets/fonts/OpenSans/OpenSans-Bold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: italic;
+  font-weight: 700;
+  src: url(../assets/fonts/OpenSans/OpenSans-BoldItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 900;
+  src: url(../assets/fonts/OpenSans/OpenSans-ExtraBold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  font-style: italic;
+  font-weight: 900;
+  src: url(../assets/fonts/OpenSans/OpenSans-ExtraBoldItalic.ttf) format('truetype');
 }
 
 ion-navbar {
@@ -49,6 +102,12 @@ ion-navbar {
       }
     }
   }
+  .back-button {
+    color: #fff;
+  }
+  .back-button:hover {
+    color: rgba(255,255,255,0.5) !important;
+  }
   .bar-buttons {
     .bar-button {
       color: #fff;
@@ -57,12 +116,10 @@ ion-navbar {
       color: rgba(255,255,255,0.5);
     }
   }
-
   ion-searchbar .searchbar-input {
     background-color: #fff !important;
     height: 35px !important;
   }
-
   ion-searchbar .searchbar-search-icon {
     top: 12px !important;
   }
@@ -93,7 +150,7 @@ ion-menu {
       border-radius: 100%;
     }
     h4 {
-      font-weight: bold;
+      font-weight: 500;
       margin: 16px 16px 0px;
     }
     p {
@@ -107,15 +164,21 @@ ion-menu {
     }
     .main-buttons {
       .item-inner {
-        font-weight: 500;
+        font-weight: 400;
       }
     }
     .other-buttons {
       border-bottom: none !important;
       .item-inner {
         border-bottom: none;
-        
+        font-weight: 100;
       }
     }
+  }
+}
+
+ion-segment {
+  ion-segment-button {
+    font-weight: 500;
   }
 }
