--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,13 +13,13 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0D99FC,
-  primary-darker:  #0288D1,
-  primary-lighter: #B3E5FC,
-  secondary:      #4FD689,
-  secondary-darker:       #41AF73,
-  danger:     #FF5252,
-  dark-darker: #D54547,
+  primary: #0D99FC,
+  primary-darker:#0288D1,
+  primary-lighter:#B3E5FC,
+  secondary: #4FD689,
+  secondary-darker:#41AF73,
+  danger: #FF5252,
+  danger-darker: #D54547,
   light: #F5F5F5
 );
 
