--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -83,6 +83,7 @@
 }
 
 ion-navbar {
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
   .toolbar-background {
     background-color: color($colors, primary);
     border-bottom: none !important;
@@ -127,7 +128,7 @@ ion-navbar {
 
 ion-tabs {
   .tabbar {
-    border-top: none !important;
+    border-top: 2px solid rgba(0, 0, 0, 0.05) !important;
   }
   .tab-button-text {
     font-weight: 700;
@@ -164,7 +165,7 @@ ion-menu {
     }
     .main-buttons {
       .item-inner {
-        font-weight: 400;
+        font-weight: 500;
       }
     }
     .other-buttons {
