--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -9,10 +9,22 @@ page-explore {
     box-shadow: 0px 20px 20px -20px rgba(0, 0, 0, 0.3);
     background-color: #fff;
     border-radius: 2px;
+    padding: 5px 10px;
     ion-textarea {
-      padding: 5px 10px;
-      resize: none;
       height: 50px;
+      textarea {
+        width: 100%;
+        height: 100%;
+        resize: none;
+      }
+    }
+    .poll {
+      .input {
+        border-radius: 2px;
+        border: 1px solid color($colors, light);
+        padding: 5px 10px;
+        margin: 10px 0px;
+      }
     }
     button {
       position: absolute;
@@ -33,12 +45,12 @@ page-explore {
   }
   .writing-post {
     ion-textarea {
-      height: 100px;
+      height: 60px;
     }
+    padding-bottom: 40px;
   }
   .post {
     padding: 10px 20px 20px 70px;
-    // max-width: 500px;
     margin: 10px auto;
     border-radius: 2px;
     box-shadow: 0px 20px 20px -20px rgba(0, 0, 0, 0.3);
